Fix admin login API URL

--- a/public/admin-login.html
+++ b/public/admin-login.html
@@ -87,7 +87,8 @@ async function adminLogin() {
     }
 
     try {
-        const res = await fetch("http://localhost:5000/api/admin-auth/login", {
+        const res = await fetch(
+           "https://elegance-rentals-fullstack.onrender.com/api/admin/login", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ username, password })
