Center add outfit form

--- a/public/admin.html
+++ b/public/admin.html
@@ -70,6 +70,13 @@ h1 {
     margin-bottom: 15px;
 }
 
+/* Add Outfit Form - Centered */
+#add .card {
+    max-width: 700px;
+    margin: 0 auto;
+    padding: 30px;
+}
+
 /* Input fields */
 input, textarea, select {
     width: 100%;
@@ -77,6 +84,7 @@ input, textarea, select {
     border: 1px solid gray;
     border-radius: 8px;
     margin: 8px 0;
+    box-sizing: border-box;
 }
 
 .submit-btn {
@@ -87,6 +95,10 @@ input, textarea, select {
     border-radius: 8px;
     cursor: pointer;
     font-size: 16px;
+}
+
+.submit-btn:hover {
+    background: #0a3680;
 }
 
 /* Table */
@@ -120,6 +132,13 @@ tr:hover {
     border: none;
     border-radius: 6px;
     cursor: pointer;
+}
+
+#msg {
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 6px;
+    text-align: center;
 }
 </style>
 </head>
