Center add outfit form

--- a/public/admin.html
+++ b/public/admin.html
@@ -71,12 +71,16 @@ h1 {
 }
 
 /* Add Outfit Form - Centered */
-#add .card {
-    max-width: 700px;
-    margin: 0 auto;
-    padding: 30px;
+#add {
+    display: flex;
+    justify-content: center;
 }
 
+#add .card {
+    max-width: 700px;
+    width: 100%;
+    padding: 30px;
+}
 /* Input fields */
 input, textarea, select {
     width: 100%;
