Shift add outfit form to left

--- a/public/admin.html
+++ b/public/admin.html
@@ -72,13 +72,17 @@ h1 {
 
 /* Add Outfit Form - Centered */
 #add {
-    display: flex;
-    justify-content: center;
+    padding-right: 80px;
+}
+
+#add h1 {
+    padding-left: 0;
 }
 
 #add .card {
     max-width: 700px;
-    width: 100%;
+    margin: 0 auto;
+    margin-left: 0;
     padding: 30px;
 }
 /* Input fields */
