--- a/public/admin-login.html
+++ b/public/admin-login.html
@@ -1,76 +1,214 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Admin Login</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #e9efff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Admin Login – Elegance Rentals</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+  <style>
+    /* ─── Reset ─── */
+    *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
 
-        .box {
-            background: white;
-            padding: 40px;
-            width: 380px;
-            border-radius: 12px;
-            box-shadow: 0 0 20px rgba(0,0,0,0.1);
-            text-align: center;
-        }
+    /* ─── Page layout ─── */
+    body {
+      font-family: 'Poppins', sans-serif;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #0f172a;
+      overflow: hidden;
+      position: relative;
+    }
 
-        h2 {
-            color: #0d47a1;
-            margin-bottom: 20px;
-        }
+    /* ── Animated gradient orbs ── */
+    .orb {
+      position: absolute;
+      border-radius: 50%;
+      filter: blur(120px);
+      opacity: 0.35;
+      pointer-events: none;
+    }
+    .orb-1 { width: 500px; height: 500px; background: #2e5bff; top: -180px; left: -150px; }
+    .orb-2 { width: 400px; height: 400px; background: #7c3aed; bottom: -160px; right: -120px; }
+    .orb-3 { width: 260px; height: 260px; background: #38bdf8; top: 50%; left: 60%; transform: translate(-50%,-50%); opacity: 0.18; }
 
-        input {
-            width: 90%;
-            padding: 12px;
-            margin: 10px 0;
-            border-radius: 8px;
-            border: 1px solid #aaa;
-            font-size: 16px;
-        }
+    /* ─── Card container ─── */
+    .login-card {
+      position: relative;
+      z-index: 1;
+      width: 100%;
+      max-width: 420px;
+      background: rgba(30, 41, 59, 0.75);
+      backdrop-filter: blur(18px);
+      -webkit-backdrop-filter: blur(18px);
+      border: 1px solid rgba(255,255,255,0.08);
+      border-radius: 24px;
+      padding: 48px 36px 40px;
+      box-shadow: 0 25px 60px rgba(0,0,0,0.45);
+      margin: 0 16px;
+    }
 
-        button {
-            width: 95%;
-            padding: 12px;
-            background: #0d47a1;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            font-size: 18px;
-            cursor: pointer;
-            margin-top: 10px;
-        }
+    /* ── Logo / Brand ── */
+    .brand {
+      text-align: center;
+      margin-bottom: 32px;
+    }
+    .brand-icon {
+      width: 56px; height: 56px;
+      background: linear-gradient(135deg, #2e5bff, #7c3aed);
+      border-radius: 16px;
+      margin: 0 auto 14px;
+      display: flex; align-items: center; justify-content: center;
+    }
+    .brand-icon svg { width: 30px; height: 30px; }
+    .brand h1 {
+      font-size: 24px;
+      font-weight: 700;
+      color: #f1f5f9;
+      letter-spacing: 0.5px;
+    }
+    .brand p {
+      font-size: 13px;
+      color: #94a3b8;
+      margin-top: 4px;
+    }
 
-        button:hover {
-            opacity: 0.9;
-        }
+    /* ── Form elements ── */
+    .field-label {
+      display: block;
+      font-size: 13px;
+      font-weight: 500;
+      color: #94a3b8;
+      margin-bottom: 8px;
+      margin-top: 22px;
+    }
+    .field-label:first-of-type { margin-top: 0; }
 
-        #adminMsg {
-            margin-top: 12px;
-            font-size: 15px;
-        }
-    </style>
+    .input-wrap {
+      position: relative;
+    }
+    .input-wrap .icon {
+      position: absolute;
+      left: 14px; top: 50%;
+      transform: translateY(-50%);
+      width: 20px; height: 20px;
+      opacity: 0.45;
+      pointer-events: none;
+    }
+    .input-wrap input {
+      width: 100%;
+      padding: 13px 16px 13px 42px;
+      background: rgba(15,23,42,0.6);
+      border: 1px solid rgba(255,255,255,0.1);
+      border-radius: 12px;
+      color: #f1f5f9;
+      font-size: 15px;
+      font-family: inherit;
+      outline: none;
+      transition: border-color 0.25s, box-shadow 0.25s;
+    }
+    .input-wrap input::placeholder { color: #64748b; }
+    .input-wrap input:focus {
+      border-color: #2e5bff;
+      box-shadow: 0 0 0 3px rgba(46,91,255,0.25);
+    }
+
+    /* ── Login button ── */
+    .login-btn {
+      display: block;
+      width: 100%;
+      margin-top: 30px;
+      padding: 14px;
+      background: linear-gradient(135deg, #2e5bff, #7c3aed);
+      border: none;
+      border-radius: 12px;
+      color: #fff;
+      font-size: 16px;
+      font-weight: 600;
+      font-family: inherit;
+      cursor: pointer;
+      letter-spacing: 0.5px;
+      transition: opacity 0.2s, transform 0.15s;
+      box-shadow: 0 4px 20px rgba(46,91,255,0.4);
+    }
+    .login-btn:hover { opacity: 0.9; transform: translateY(-1px); }
+    .login-btn:active { transform: translateY(0); }
+
+    /* ── Message ── */
+    #adminMsg {
+      margin-top: 18px;
+      font-size: 14px;
+      text-align: center;
+      min-height: 20px;
+      font-weight: 500;
+    }
+
+    /* ── Footer hint ── */
+    .login-footer {
+      margin-top: 28px;
+      text-align: center;
+      font-size: 12px;
+      color: #475569;
+    }
+    .login-footer a { color: #60a5fa; text-decoration: none; }
+    .login-footer a:hover { text-decoration: underline; }
+  </style>
 </head>
 <body>
 
-<div class="box">
-    <h2>Admin Login</h2>
+<!-- Background orbs -->
+<div class="orb orb-1"></div>
+<div class="orb orb-2"></div>
+<div class="orb orb-3"></div>
 
-    <input id="adminUsername" placeholder="Username">
-    <input id="adminPassword" type="password" placeholder="Password">
-    
-    <button onclick="adminLogin()">Login</button>
+<!-- Login card -->
+<div class="login-card">
 
-    <p id="adminMsg"></p>
+  <!-- Brand header -->
+  <div class="brand">
+    <div class="brand-icon">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <path d="M12 2L8 6H4v4l-2 2v8h20v-8l-2-2V6h-4l-4-4z"/>
+        <path d="M12 6v12"/>
+        <circle cx="12" cy="18" r="1.5" fill="#fff"/>
+      </svg>
+    </div>
+    <h1>Elegance Rentals</h1>
+    <p>Admin Panel</p>
+  </div>
+
+  <!-- Username -->
+  <label class="field-label">Username</label>
+  <div class="input-wrap">
+    <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="#94a3b8" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
+      <circle cx="12" cy="7" r="4"/>
+    </svg>
+    <input id="adminUsername" type="text" placeholder="Enter username" autocomplete="off" />
+  </div>
+
+  <!-- Password -->
+  <label class="field-label">Password</label>
+  <div class="input-wrap">
+    <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="#94a3b8" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <rect x="3" y="11" width="18" height="11" rx="2" ry="2"/>
+      <path d="M7 11V7a5 5 0 0 1 10 0v4"/>
+    </svg>
+    <input id="adminPassword" type="password" placeholder="Enter password" />
+  </div>
+
+  <!-- Login button -->
+  <button class="login-btn" onclick="adminLogin()">Sign In</button>
+
+  <!-- Message area -->
+  <p id="adminMsg"></p>
+
+  <!-- Footer -->
+  <div class="login-footer">Secured with JWT authentication</div>
 </div>
+
+<!-- YOUR ORIGINAL WORKING JAVASCRIPT (unchanged) -->
 <script>
 async function adminLogin() {
   const username = document.getElementById("adminUsername").value.trim();
