--- a/public/admin.html
+++ b/public/admin.html
@@ -3,150 +3,300 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Admin Panel - Elegance Rentals</title>
 
 <style>
+/* ─── Google Font import ─── */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+/* ─── Reset ─── */
+*, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
+
+/* ─── Body ─── */
 body {
-    margin: 0;
-    display: flex;
-    font-family: Arial;
-    background: #eef3ff;
+  font-family: 'Poppins', sans-serif;
+  display: flex;
+  min-height: 100vh;
+  background: #f0f4f8;
+  color: #1e293b;
 }
 
-/* Sidebar */
+/* ═══════════════════════════════════
+   SIDEBAR
+   ═══════════════════════════════════ */
 .sidebar {
-    width: 240px;
-    background: #0d47a1;
-    color: white;
-    height: 100vh;
-    padding-top: 30px;
-    position: fixed;
+  width: 240px;
+  min-height: 100vh;
+  background: linear-gradient(180deg, #0f172a 0%, #1e293b 100%);
+  color: #fff;
+  position: fixed;
+  top: 0; left: 0;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  z-index: 100;
+  box-shadow: 4px 0 24px rgba(0,0,0,0.25);
 }
 
+/* Sidebar brand strip */
 .sidebar h2 {
-    text-align: center;
-    margin-bottom: 30px;
-    font-size: 22px;
+  padding: 28px 20px 24px;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 0.3px;
+  color: #fff;
+  border-bottom: 1px solid rgba(255,255,255,0.07);
+  text-align: left;
+  background: linear-gradient(135deg, #2e5bff, #7c3aed);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
 }
 
+/* Nav buttons */
 .sidebar button {
-    width: 85%;
-    margin: 12px auto;
-    display: block;
-    background: rgba(255,255,255,0.2);
-    color: white;
-    border: none;
-    padding: 12px;
-    border-radius: 7px;
-    font-size: 16px;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  width: calc(100% - 24px);
+  margin: 4px 12px;
+  background: transparent;
+  color: #cbd5e1;
+  border: none;
+  padding: 12px 16px;
+  border-radius: 10px;
+  font-size: 14px;
+  font-weight: 500;
+  font-family: inherit;
+  cursor: pointer;
+  transition: background 0.2s, color 0.2s, padding-left 0.2s;
+  gap: 10px;
+  text-align: left;
 }
 
 .sidebar button:hover {
-    background: rgba(255,255,255,0.3);
+  background: rgba(255,255,255,0.07);
+  color: #fff;
+  padding-left: 20px;
 }
 
-/* Main Area */
+/* Active nav item */
+.sidebar button.active {
+  background: linear-gradient(135deg, rgba(46,91,255,0.2), rgba(124,58,237,0.15));
+  color: #60a5fa;
+  border-left: 3px solid #2e5bff;
+}
+
+/* Logout button at bottom */
+.sidebar button.logout-nav {
+  margin-top: auto;
+  border-top: 1px solid rgba(255,255,255,0.06);
+  color: #f87171;
+  border-radius: 0 10px 10px 0;
+  margin-left: 0;
+  width: 100%;
+  padding-left: 28px;
+}
+.sidebar button.logout-nav:hover {
+  background: rgba(248,113,113,0.1);
+  color: #fca5a5;
+  padding-left: 32px;
+}
+
+/* ═══════════════════════════════════
+   MAIN CONTENT
+   ═══════════════════════════════════ */
 .main {
-    margin-left: 260px;
-    padding: 20px;
-    width: calc(100% - 260px);
+  margin-left: 240px;
+  flex: 1;
+  padding: 32px 36px;
+  min-height: 100vh;
+  background: #f0f4f8;
 }
 
 .panel {
-    display: none;
+  display: none;
+  animation: fadeIn 0.3s ease;
 }
 
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(6px); }
+  to   { opacity: 1; transform: translateY(0); }
+}
+
+/* Panel headings */
 h1 {
-    color: #0d47a1;
+  font-size: 24px;
+  font-weight: 700;
+  color: #1e293b;
+  margin-bottom: 20px;
+  padding-bottom: 10px;
+  border-bottom: 2px solid transparent;
+  background-image: linear-gradient(#f0f4f8, #f0f4f8), linear-gradient(90deg, #2e5bff, #7c3aed);
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+  display: inline-block;
 }
 
-/* Cards */
+/* ── Stat cards row ── */
+#stats {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+#stats .card {
+  flex: 1;
+  min-width: 180px;
+}
+#stats .card h3 {
+  font-size: 15px;
+  font-weight: 500;
+  color: #64748b;
+  margin-bottom: 6px;
+}
+#stats .card h3 span {
+  display: block;
+  font-size: 32px;
+  font-weight: 700;
+  color: #2e5bff;
+  margin-top: 4px;
+}
+
+/* ── White cards ── */
 .card {
-    background: white;
-    padding: 18px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.15);
-    margin-bottom: 15px;
+  background: #fff;
+  padding: 24px;
+  border-radius: 16px;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.06);
+  margin-bottom: 18px;
+  border: 1px solid rgba(0,0,0,0.04);
 }
 
-/* Add Outfit Form - Centered */
-#add {
-    padding-right: 80px;
-}
+/* ── Add-outfit form ── */
+#add { max-width: 680px; }
+#add h1 { margin-bottom: 18px; }
 
-#add h1 {
-    padding-left: 0;
-}
-
-#add .card {
-    max-width: 700px;
-    margin: 0 auto;
-    margin-left: 0;
-    padding: 30px;
-}
-/* Input fields */
 input, textarea, select {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid gray;
-    border-radius: 8px;
-    margin: 8px 0;
-    box-sizing: border-box;
+  width: 100%;
+  padding: 12px 16px;
+  border: 1px solid #e2e8f0;
+  border-radius: 10px;
+  font-size: 14px;
+  font-family: inherit;
+  color: #1e293b;
+  background: #f8fafc;
+  margin: 7px 0;
+  transition: border-color 0.2s, box-shadow 0.2s;
+  outline: none;
 }
+input:focus, textarea:focus, select:focus {
+  border-color: #2e5bff;
+  box-shadow: 0 0 0 3px rgba(46,91,255,0.18);
+  background: #fff;
+}
+input::placeholder, textarea::placeholder { color: #94a3b8; }
 
+textarea { resize: vertical; min-height: 90px; }
+
+input[type="file"] {
+  background: #eef2ff;
+  border: 2px dashed #c7d2fe;
+  color: #4f46e5;
+  font-weight: 500;
+  cursor: pointer;
+}
+input[type="file"]:hover { border-color: #2e5bff; }
+
+/* Submit / action buttons */
 .submit-btn {
-    padding: 12px;
-    background: #0d47a1;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 16px;
+  display: inline-block;
+  padding: 11px 28px;
+  background: linear-gradient(135deg, #2e5bff, #4f7aff);
+  color: #fff;
+  border: none;
+  border-radius: 10px;
+  font-size: 15px;
+  font-weight: 600;
+  font-family: inherit;
+  cursor: pointer;
+  margin-top: 12px;
+  transition: opacity 0.2s, transform 0.15s;
+  box-shadow: 0 3px 14px rgba(46,91,255,0.35);
 }
+.submit-btn:hover { opacity: 0.9; transform: translateY(-1px); }
 
-.submit-btn:hover {
-    background: #0a3680;
-}
-
-/* Table */
+/* ═══════════════════════════════════
+   TABLES
+   ═══════════════════════════════════ */
 table {
-    width: 100%;
-    border-collapse: collapse;
-    background: white;
-    border-radius: 12px;
-    overflow: hidden;
+  width: 100%;
+  border-collapse: collapse;
+  background: #fff;
+  border-radius: 14px;
+  overflow: hidden;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.06);
+  border: 1px solid rgba(0,0,0,0.04);
 }
 
-th {
-    background: #0d47a1;
-    color: white;
-    padding: 12px;
+thead th {
+  background: linear-gradient(135deg, #1e293b, #334155);
+  color: #fff;
+  padding: 14px 16px;
+  text-align: left;
+  font-size: 13px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 0.6px;
 }
 
 td {
-    padding: 12px;
-    border-bottom: 1px solid #ddd;
+  padding: 14px 16px;
+  border-bottom: 1px solid #f1f5f9;
+  font-size: 14px;
+  color: #374151;
 }
 
-tr:hover {
-    background: #f0f4ff;
+tr:last-child td { border-bottom: none; }
+
+tbody tr {
+  transition: background 0.15s;
+}
+tbody tr:hover {
+  background: #eef2ff;
 }
 
+/* ── Action buttons in table ── */
 .delete-btn {
-    background: red;
-    color: white;
-    padding: 6px 10px;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
+  display: inline-block;
+  padding: 6px 14px;
+  background: #fee2e2;
+  color: #dc2626;
+  border: none;
+  border-radius: 8px;
+  font-size: 13px;
+  font-weight: 600;
+  font-family: inherit;
+  cursor: pointer;
+  transition: background 0.2s;
+}
+.delete-btn:hover { background: #fecaca; }
+
+/* Edit btn (reuses .submit-btn but smaller) */
+.submit-btn[style*="margin-right"] {
+  padding: 6px 14px;
+  font-size: 13px;
+  margin-top: 0;
+  box-shadow: 0 2px 8px rgba(46,91,255,0.25);
 }
 
+/* ── Message box ── */
 #msg {
-    margin-top: 10px;
-    padding: 10px;
-    border-radius: 6px;
-    text-align: center;
+  margin-top: 14px;
+  padding: 10px 16px;
+  border-radius: 10px;
+  font-size: 14px;
+  text-align: center;
+  min-height: 20px;
 }
 </style>
 </head>
@@ -157,12 +307,12 @@ tr:hover {
 <div class="sidebar">
     <h2>Elegance Admin</h2>
 
-    <button onclick="showPanel('dashboard')">Dashboard</button>
-    <button onclick="showPanel('add')">Add Outfit</button>
-    <button onclick="showPanel('manage')">Manage Outfits</button>
-    <button onclick="showPanel('orders')">Orders</button>
-    <button onclick="showPanel('users')">Users</button>
-    <button onclick="logout()">Logout</button>
+    <button onclick="showPanel('dashboard')">📊 Dashboard</button>
+    <button onclick="showPanel('add')">✨ Add Outfit</button>
+    <button onclick="showPanel('manage')">👗 Manage Outfits</button>
+    <button onclick="showPanel('orders')">📦 Orders</button>
+    <button onclick="showPanel('users')">👤 Users</button>
+    <button onclick="logout()">🚪 Logout</button>
 </div>
 
 <!-- Main Content -->
@@ -212,295 +362,8 @@ tr:hover {
 
 </div>
 
-<script>
-/* If not logged in, redirect */
-if (!localStorage.getItem("adminToken")) {
-    window.location.href = "admin-login.html";
-}
-
-/* Sidebar switching */
-function showPanel(id) {
-    document.querySelectorAll(".panel").forEach(p => p.style.display = "none");
-    document.getElementById(id).style.display = "block";
-
-    if (id === "dashboard") loadStats();
-    if (id === "manage") loadItems();
-    if (id === "orders") loadOrders();
-    if (id === "users") loadUsers();
-}
-
-/* Logout */
-function logout() {
-    localStorage.removeItem("adminToken");
-    window.location.href = "admin-login.html";
-}
-
-/* Dashboard stats */
-async function loadStats() {
-    const token = localStorage.getItem("adminToken");
-
-    let items = await fetch("https://elegance-rentals-fullstack.onrender.com/api/admin/items", {
-        headers: { "Authorization": "Bearer " + token }
-    }).then(r => r.json());
-
-    let orders = await fetch("https://elegance-rentals-fullstack.onrender.com/api/admin/orders", {
-        headers: { "Authorization": "Bearer " + token }
-    }).then(r => r.json());
-
-    document.getElementById("stats").innerHTML = `
-        <div class="card">
-            <h3>Total Outfits: ${items.length}</h3>
-            <h3>Total Orders: ${orders.length}</h3>
-        </div>
-    `;
-}
-
-/* Add outfit */
-document.getElementById("addForm").addEventListener("submit", async e => {
-  e.preventDefault();
-
-  const token = localStorage.getItem("adminToken");
-  const msg = document.getElementById("msg");
-
-  if (!token) {
-    msg.innerHTML = "Admin not logged in";
-    return;
-  }
-
-  const formData = new FormData();
-  formData.append("name", name.value);
-  formData.append("category", category.value);
-  formData.append("price", price.value);
-  formData.append("deposit", deposit.value);
-  formData.append("description", description.value);
-  formData.append("image", image.files[0]);
-
-  const res = await fetch(
-    "https://elegance-rentals-fullstack.onrender.com/api/admin/items/add",
-    {
-      method: "POST",
-      headers: {
-        Authorization: "Bearer " + token
-      },
-      body: formData
-    }
-  );
-
-  const data = await res.json();
-  msg.innerHTML = data.message;
-});
-
-
-/* Manage Items */
-/* ============================
-   MANAGE ITEMS (with Edit/Delete)
-============================ */
-async function loadItems() {
-  const token = localStorage.getItem("adminToken");
-  if (!token) return window.location.href = "admin-login.html";
-
-  let res = await fetch("https://elegance-rentals-fullstack.onrender.com/api/admin/items", {
-    headers: { "Authorization": "Bearer " + token }
-  });
-
-  if (!res.ok) {
-    document.getElementById("itemsTable").innerHTML = "<p>Error loading items</p>";
-    return;
-  }
-
-  let items = await res.json();
-
-  // build table
-  let html = `
-    <table>
-      <thead>
-        <tr>
-          <th>Image</th>
-          <th>Name</th>
-          <th>Category</th>
-          <th>Price</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-  `;
-
-  items.forEach(i => {
-    const imgSrc = i.image && i.image.startsWith("/") ? i.image : (i.image || "");
-    html += `
-      <tr>
-        <td>${imgSrc ? `<img src="${imgSrc}" width="80" style="object-fit:cover;border-radius:6px">` : ''}</td>
-        <td>${escapeHtml(i.name)}</td>
-        <td>${escapeHtml(i.category || '')}</td>
-        <td>₹${i.price}</td>
-        <td>
-          <button class="submit-btn" style="margin-right:8px" onclick='editItem("${i._id}")'>Edit</button>
-          <button class="delete-btn" onclick='deleteItem("${i._id}")'>Delete</button>
-        </td>
-      </tr>
-    `;
-  });
-
-  html += `</tbody></table>`;
-  document.getElementById("itemsTable").innerHTML = html;
-}
-
-/* escape to avoid broken HTML */
-function escapeHtml(str) {
-  if (!str) return '';
-  return String(str)
-    .replace(/&/g, "&amp;")
-    .replace(/"/g, "&quot;")
-    .replace(/'/g, "&#39;")
-    .replace(/</g, "&lt;")
-    .replace(/>/g, "&gt;");
-}
-
-/* DELETE item */
-async function deleteItem(id) {
-  if (!confirm("Are you sure you want to delete this outfit?")) return;
-  const token = localStorage.getItem("adminToken");
-  try {
-    const res = await fetch("https://elegance-rentals-fullstack.onrender.com/api/admin/items/" + id, {
-      method: "DELETE",
-      headers: { "Authorization": "Bearer " + token }
-    });
-    const data = await res.json();
-    if (res.ok) {
-      alert(data.message || "Deleted");
-      loadItems();
-    } else {
-      alert(data.message || "Delete failed");
-    }
-  } catch (err) {
-    console.error(err);
-    alert("Server error");
-  }
-}
-
-/* EDIT item (prompt-based quick editor) */
-async function editItem(id) {
-  const token = localStorage.getItem("adminToken");
-  const resItem = await fetch("https://elegance-rentals-fullstack.onrender.com/api/admin/items", {
-    headers: { "Authorization": "Bearer " + token }
-  });
-  const allItems = await resItem.json();
-  const item = allItems.find(x => x._id === id);
-  if (!item) return alert("Item not found");
-
-  // Get new values - if user leaves blank, keep original
-  const newName = prompt("New name:", item.name);
-  if (newName === null) return; // User cancelled
-  
-  const newCategory = prompt("New category:", item.category || '');
-  if (newCategory === null) return;
-  
-  const newPrice = prompt("New price:", String(item.price));
-  if (newPrice === null) return;
-  
-  const newDeposit = prompt("New deposit:", String(item.deposit || 0));
-  if (newDeposit === null) return;
-  
-  const newDesc = prompt("New description:", item.description || '');
-  if (newDesc === null) return;
-
-  // Build body - only send values that are not empty
-  const body = {
-    name: newName.trim() || item.name,
-    category: newCategory.trim() || item.category,
-    price: newPrice.trim() || String(item.price),
-    deposit: newDeposit.trim() || String(item.deposit),
-    description: newDesc.trim() || item.description
-  };
-
-  // Send PUT request
-  try {
-    const res = await fetch("https://elegance-rentals-fullstack.onrender.com/api/admin/items/" + id, {
-      method: "PUT",
-      headers: {
-        "Content-Type": "application/json",
-        "Authorization": "Bearer " + token
-      },
-      body: JSON.stringify(body)
-    });
-    const data = await res.json();
-    if (res.ok) {
-      alert("Item updated successfully");
-      loadItems();
-    } else {
-      alert(data.message || "Update failed");
-    }
-  } catch (err) {
-    console.error(err);
-    alert("Server error");
-  }
-}
-
-/* Orders */
-async function loadOrders() {
-    const token = localStorage.getItem("adminToken");
-    let orders = await fetch("https://elegance-rentals-fullstack.onrender.com/api/admin/orders", {
-        headers: { "Authorization": "Bearer " + token }
-    }).then(r => r.json());
-
-    let html = `
-        <table>
-            <tr>
-                <th>Customer Name</th>
-                <th>Mobile</th>
-                <th>Outfit</th>
-                <th>Days</th>
-                <th>Amount</th>
-                <th>Payment</th>
-                <th>Address</th>
-                <th>Date</th>
-            </tr>
-    `;
-
-    orders.forEach(o => {
-        html += `
-            <tr>
-                <td>${o.customerName || 'N/A'}</td>
-                <td>${o.mobile || 'N/A'}</td>
-                <td>${o.itemId?.name || 'N/A'}</td>
-                <td>${o.totalDays || 0}</td>
-                <td>₹${o.totalAmount || 0}</td>
-                <td>${o.paymentMethod || 'N/A'}</td>
-                <td>${o.address || 'N/A'}, ${o.pincode || ''}</td>
-                <td>${new Date(o.createdAt).toLocaleDateString()}</td>
-            </tr>
-        `;
-    });
-
-    html += "</table>";
-    document.getElementById("ordersTable").innerHTML = html;
-}
-
-/* Users */
-async function loadUsers() {
-    let users = await fetch("https://elegance-rentals-fullstack.onrender.com/api/auth/users").then(r => r.json());
-
-    let html = `
-        <table>
-            <tr>
-                <th>Username</th>
-                <th>Joined</th>
-            </tr>
-    `;
-
-    users.forEach(u => {
-        html += `
-            <tr>
-                <td>${u.username}</td>
-                <td>${new Date(u.createdAt).toLocaleDateString()}</td>
-            </tr>
-        `;
-    });	
-
-    html += "</table>";
-    document.getElementById("usersTable").innerHTML = html;
-}
-</script>
+<!-- Link to your existing admin.js file -->
+<script src="admin.js"></script>
 
 </body>
 </html>
